arista/eos accepting updates
